Use immutable Set for historicalCurrenciesInJDK constant.